fixed things not truncating correctly

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -77,6 +77,7 @@ button {
 }
 
 .truncate {
+  max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
